src/objects/QuoteLineItem.object
<CustomObject>
    <fields>
        <fullName>Budget_Price__c</fullName>
        <label>Budget Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Price__c</fullName>
        <label>Contract Price</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealer_Margin_Amount__c</fullName>
        <label>Dealer Margin Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealer_Margin__c</fullName>
        <label>Dealer Margin %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Delivery__c</fullName>
        <label>Delivery</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nissan_Support__c</fullName>
        <label>Nissan Support</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RRP__c</fullName>
        <label>RRP</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Product_Quantity</fullName>
        <active>true</active>
        <errorConditionFormula>MOD( Quantity, 1) &gt; 0</errorConditionFormula>
        <errorMessage>Enter a whole number only.</errorMessage>
    </validationRules>
</CustomObject>